Fixed weird bug